# Adafruit_CircuitPython_Trellis

./: .travis.yml  LICENSE  README.md  README.rst  adafruit_trellis.py  pyproject.toml  setup.py
adafruit_trellis/: trellis.py  trellis_set.py
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: trellis_set_simpletest.py  trellis_simpletest.py  trellis_single_simpletest.py
